templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: php-multiple-container
  name: php-multiple-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-multiple-container
  template:
    metadata:
      labels:
        app: php-multiple-container
    spec:
      containers:
        - name: php
          image: adminvitcon/my-php-app:0.0.1
          volumeMounts:
            - name: app-volume
              mountPath: /app
        - name: nginx
          image: adminvitcon/my-nginx-app:0.0.2
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
            - name: app-volume # может быть лишним, надо проверить
              mountPath: /app
      volumes:
        - name: app-volume
#          persistentVolumeClaim:
#            claimName: app-volume-claim
          hostPath:
            path: /home/home/sites/kub8s/helm-k8s-index
        - name: nginx-config
          configMap:
            name: nginx-config-map
            items:
              - key: config
                path: default.conf
