templates/traefik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-deployment
  labels:
    app: project-name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-name
  template:
    metadata:
      labels:
        app: project-name
    spec:
      serviceAccountName: traefik-service-account
      terminationGracePeriodSeconds: 60
      hostNetwork: false
      containers:
        - name: devmoydom-traefik
          image: traefik:v2.9.8
          ports:
            - name: "traefik"
              containerPort: 9000
              protocol: "TCP"
            - name: "web"
              containerPort: 8000
              protocol: "TCP"
            - name: "websecure"
              containerPort: 8443
              protocol: "TCP"
          volumeMounts:
            - name: data
              mountPath: /data
          args:
            - "--global.checknewversion"
            - "--global.sendanonymoususage"
            - "--api.insecure=true"                       # включаем доступ к Dashboard без авторизации
            - "--api.dashboard=true"                     # включаем Dashboard
            - "--entrypoints.websecure.address=:8443"
            - "--entrypoints.web.address=:8000"
            - "--entrypoints.traefik.address=:9000"    # Эндпоинт для Dashboard
            - "--ping=true"
            - "--providers.kubernetesingress=true"       # поддержка Ingress ресурсов
            - "--providers.kubernetescrd"
            - "--providers.kubernetescrd.allowCrossNamespace=true"
            - "--providers.kubernetesingress"
            - "--entrypoints.websecure.http.tls=true"
            - "--log.level=INFO"
      volumes:
        - name: data
          emptyDir: {}
