templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-service
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: php-multiple-container
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
#      nodePort: 30001  # Укажите нужный вам порт для доступа
  selector:
    app: php-multiple-container
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: test-ingress-route
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`skeleton.local`)
      kind: Rule
      services:
        - name: nginx-service
          port: 80
#---
#apiVersion: networking.k8s.io/v1
#kind: IngressClass
#metadata:
#  annotations:
#    ingressclass.kubernetes.io/is-default-class: "true"
#  labels:
#    app.kubernetes.io/name: traefik
#    app.kubernetes.io/instance: devmoydom-default
#    helm.sh/chart: traefik-21.2.0
#    app.kubernetes.io/managed-by: Helm
#  name: devmoydom-traefik
#spec:
#  controller: traefik.io/ingress-controller
